--- a/scss/_game.scss
+++ b/scss/_game.scss
@@ -220,8 +220,16 @@
 		color: #ffffff;
 	}
 }
+@media(max-width: 963px) {
+	.game-item__image img {
+		max-height: 200px;
+	}
+	.game-item__text {
+		height: 300px;
+	}
+}
 
-@media (max-width: 961px) {
+@media (max-width: 767px) {
 	.game-item__image img {
 		height: 161px;
 	}
@@ -256,13 +264,13 @@
 	.game .slick-prev {
 		background: url(../img/icons/arrow-left.svg) center / 50% no-repeat, #010038;
 		&:hover {
-			background: url(../img/icons/arrow-left.svg) center / 50% no-repeat, linear-gradient(90deg, #110F75 2.35%, #E465A3 97.35%);
+			background: url(../img/icons/arrow-left.svg) center / 50% no-repeat, #010038;
 		}
 	}
 	.game .slick-next {
 		background: url(../img/icons/arrow-right.svg) center / 50% no-repeat, #010038;
 		&:hover {
-			background: url(../img/icons/arrow-right.svg) center / 50% no-repeat, linear-gradient(90deg, #110F75 2.35%, #E465A3 97.35%);
+			background: url(../img/icons/arrow-right.svg) center / 50% no-repeat, #010038;
 		}
 	}
 	.game__arrows {
@@ -312,7 +320,6 @@
 }
 
 @media (max-width: 550px) {
-
 	.game-item__title {
 		font-size: 25px;
 		line-height: 30px;
@@ -333,7 +340,7 @@
 		height: 300px;
 	}
 }
-@media(max-width:500px) {
+@media (max-width: 500px) {
 	.game {
 		margin-top: 0;
 		padding-bottom: 100px;
